# wasmiot-orchestrator

./: .gitmodules  client.Dockerfile  docker-compose.example-devices.yml  docker-compose.yml  package.json
client/cli/src/: cli-deployment.ts  cli-execute.ts  cli-module.ts
client/testData/wasm/: Cargo.toml
docs/orchestrator/: api.yml
docs/orchestrator/schemas/: Manifest.yml  OrderedResources.yml
example/: docker-compose.icwe23-demo.yml  icwe23-demo.sh  icwe23-run.sh
example/device1/configs/: wasmiot-device-description.json
example/device2/configs/: wasmiot-device-description.json
example/device3/configs/: wasmiot-device-description.json
example/trkks-thesis-demo/: Cargo.toml  demo.sh  docker-compose.yml  index.html  index.js  run.sh
example/trkks-thesis-demo/camera/: Cargo.toml  description.json
example/trkks-thesis-demo/get_index_noop/: description.json
example/trkks-thesis-demo/snake/: Cargo.toml  description.json
example/trkks-thesis-demo/snake_client/: Cargo.toml  description.json  index.html  index.js
example/trkks-thesis-demo/snake_client/src/: lib.rs  rpc_utils.rs
fileserv/: constants.js  package-lock.json  package.json  server.js  utils.js
fileserv/routes/: coreServices.js  datalist.js  deployment.js  execution.js  index.js  migration.js  module.js
fileserv/src/: app.js  orchestrator.js
orchestrator/: Cargo.toml  Dockerfile  docker-compose.yml
orchestrator/src/: lib.rs  model.rs  orchestrator.rs  supervisor.rs
orchestrator/src/model/: deployment.rs  device.rs  module.rs
orchestrator/src/supervisor/: http_supervisor.rs
(+19 files in other folders)
