[package]
name = "wasmiot_orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-multipart = "0.6.1"
serde = { version = "1", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.0"
mdns-sd = "0.9.1"
reqwest = "0.11.22"
[dependencies.mongodb]
version = "2.7.0"
features = ["tokio-sync"]

[[bin]]
name = "wasmiot_orchestrator"
path = "src/bin/server/main.rs"
