[package]
name = "snake_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "native_main"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
image = "0.24.8"
snake = { path = "../snake" }
camera = { path = "../camera" }
